--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6,6 +6,7 @@
 
 
 
+
 body,
 input,
 textarea,
@@ -482,12 +483,22 @@ h6,
   font-family: 'Merriweather', serif;
   font-size: 48px;
 }
+#header3-31 .mbr-section-title,
+#header3-31 .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-31 H3 {
+  font-family: 'Merriweather', serif;
+}
 #features4-r .card-subtitle {
   color: #bcbcbc;
 }
 #features4-r .iconbox {
   background-color: #ffffff;
   border-color: #ffffff;
+}
+#features4-r P {
+  text-align: left;
 }
 #ext_menu-18 .hide-buttons .nav-btn {
   display: none !important;
@@ -914,5 +925,130 @@ h6,
 }
 #ext_menu-2h .link[aria-expanded="true"],
 #ext_menu-2h .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#ext_menu-2x .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-2x .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-2x .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-2x .close-icon::before,
+#ext_menu-2x .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-2x .link,
+#ext_menu-2x .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-2x .link {
+  font-size: 0.75rem;
+}
+#ext_menu-2x .dropdown-item,
+#ext_menu-2x .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#ext_menu-2x .link:hover,
+#ext_menu-2x .dropdown-item:hover,
+#ext_menu-2x .link:focus,
+#ext_menu-2x .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-2x .link[aria-expanded="true"],
+#ext_menu-2x .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-2x .nav-dropdown-sm .link:focus,
+#ext_menu-2x .nav-dropdown-sm .link:hover,
+#ext_menu-2x .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-2x .nav-dropdown-sm .dropdown-item:hover {
+  background: #000000!important;
+}
+#ext_menu-2x .navbar,
+#ext_menu-2x .nav-dropdown-sm,
+#ext_menu-2x .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-2x .nav-dropdown-sm .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-2x .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-2x .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-2x .bg-color.transparent.opened .link:hover,
+#ext_menu-2x .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-2x .link[aria-expanded="true"],
+#ext_menu-2x .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#form1-30 .form-control-label {
+  color: #232323;
+}
+#ext_menu-34 .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-34 .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-34 .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-34 .close-icon::before,
+#ext_menu-34 .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-34 .link,
+#ext_menu-34 .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-34 .link {
+  font-size: 0.75rem;
+}
+#ext_menu-34 .dropdown-item,
+#ext_menu-34 .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#ext_menu-34 .link:hover,
+#ext_menu-34 .dropdown-item:hover,
+#ext_menu-34 .link:focus,
+#ext_menu-34 .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-34 .link[aria-expanded="true"],
+#ext_menu-34 .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-34 .nav-dropdown-sm .link:focus,
+#ext_menu-34 .nav-dropdown-sm .link:hover,
+#ext_menu-34 .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-34 .nav-dropdown-sm .dropdown-item:hover {
+  background: #000000!important;
+}
+#ext_menu-34 .navbar,
+#ext_menu-34 .nav-dropdown-sm,
+#ext_menu-34 .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-34 .nav-dropdown-sm .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-34 .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-34 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-34 .bg-color.transparent.opened .link:hover,
+#ext_menu-34 .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-34 .link[aria-expanded="true"],
+#ext_menu-34 .dropdown-item[aria-expanded="true"] {
   color: #c0a375!important;
 }
