create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,7 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Merriweather:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=PT+Serif:400,700);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
+
 
 
 
@@ -483,13 +485,17 @@ h6,
   font-family: 'Merriweather', serif;
   font-size: 48px;
 }
+#msg-box6-g .btn {
+  font-size: 14px;
+}
 #header3-31 .mbr-section-title,
 #header3-31 .mbr-section-subtitle {
   text-align: center;
 }
 #header3-31 H3 {
-  font-family: 'Merriweather', serif;
+  font-family: 'PT Serif', serif;
   font-size: 46px;
+  color: #000000;
 }
 #features4-r .card-subtitle {
   color: #bcbcbc;
@@ -500,6 +506,10 @@ h6,
 }
 #features4-r P {
   text-align: left;
+}
+#features4-r H4 {
+  color: #232323;
+  font-family: 'PT Serif', serif;
 }
 #ext_menu-18 .hide-buttons .nav-btn {
   display: none !important;
@@ -1056,4 +1066,74 @@ h6,
 #ext_menu-34 .link[aria-expanded="true"],
 #ext_menu-34 .dropdown-item[aria-expanded="true"] {
   color: #c0a375!important;
+}
+#gallery4-3b LI {
+  color: #ffffff;
+}
+#ext_menu-3e .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-3e .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-3e .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-3e .close-icon::before,
+#ext_menu-3e .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-3e .link,
+#ext_menu-3e .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-3e .link {
+  font-size: 0.75rem;
+}
+#ext_menu-3e .dropdown-item,
+#ext_menu-3e .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#ext_menu-3e .link:hover,
+#ext_menu-3e .dropdown-item:hover,
+#ext_menu-3e .link:focus,
+#ext_menu-3e .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-3e .link[aria-expanded="true"],
+#ext_menu-3e .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-3e .nav-dropdown-sm .link:focus,
+#ext_menu-3e .nav-dropdown-sm .link:hover,
+#ext_menu-3e .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-3e .nav-dropdown-sm .dropdown-item:hover {
+  background: #000000!important;
+}
+#ext_menu-3e .navbar,
+#ext_menu-3e .nav-dropdown-sm,
+#ext_menu-3e .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-3e .nav-dropdown-sm .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-3e .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-3e .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-3e .bg-color.transparent.opened .link:hover,
+#ext_menu-3e .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-3e .link[aria-expanded="true"],
+#ext_menu-3e .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#header4-3j .mbr-section-lead {
+  text-align: left;
+}
+#header4-3j .mbr-section-title {
+  text-align: center;
 }
