--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,8 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Merriweather:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=PT+Serif:400,700);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
-@import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
+
 
 
 
@@ -487,6 +488,9 @@ h6,
 }
 #msg-box6-g .btn {
   font-size: 14px;
+}
+#msg-box6-g P {
+  font-family: 'Lora', serif;
 }
 #header3-31 .mbr-section-title,
 #header3-31 .mbr-section-subtitle {
@@ -1067,9 +1071,7 @@ h6,
 #ext_menu-34 .dropdown-item[aria-expanded="true"] {
   color: #c0a375!important;
 }
-#gallery4-3b LI {
-  color: #ffffff;
-}
+
 #ext_menu-3e .hide-buttons .nav-btn {
   display: none !important;
 }
@@ -1133,7 +1135,252 @@ h6,
 }
 #header4-3j .mbr-section-lead {
   text-align: left;
+  font-family: 'Lora', serif;
 }
 #header4-3j .mbr-section-title {
   text-align: center;
+}
+#ext_menu-3o .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-3o .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-3o .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-3o .close-icon::before,
+#ext_menu-3o .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-3o .link,
+#ext_menu-3o .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-3o .link {
+  font-size: 0.75rem;
+}
+#ext_menu-3o .dropdown-item,
+#ext_menu-3o .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#ext_menu-3o .link:hover,
+#ext_menu-3o .dropdown-item:hover,
+#ext_menu-3o .link:focus,
+#ext_menu-3o .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-3o .link[aria-expanded="true"],
+#ext_menu-3o .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-3o .nav-dropdown-sm .link:focus,
+#ext_menu-3o .nav-dropdown-sm .link:hover,
+#ext_menu-3o .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-3o .nav-dropdown-sm .dropdown-item:hover {
+  background: #000000!important;
+}
+#ext_menu-3o .navbar,
+#ext_menu-3o .nav-dropdown-sm,
+#ext_menu-3o .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-3o .nav-dropdown-sm .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-3o .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-3o .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-3o .bg-color.transparent.opened .link:hover,
+#ext_menu-3o .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-3o .link[aria-expanded="true"],
+#ext_menu-3o .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#ext_menu-3r .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-3r .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-3r .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-3r .close-icon::before,
+#ext_menu-3r .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-3r .link,
+#ext_menu-3r .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-3r .link {
+  font-size: 0.75rem;
+}
+#ext_menu-3r .dropdown-item,
+#ext_menu-3r .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#ext_menu-3r .link:hover,
+#ext_menu-3r .dropdown-item:hover,
+#ext_menu-3r .link:focus,
+#ext_menu-3r .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-3r .link[aria-expanded="true"],
+#ext_menu-3r .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-3r .nav-dropdown-sm .link:focus,
+#ext_menu-3r .nav-dropdown-sm .link:hover,
+#ext_menu-3r .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-3r .nav-dropdown-sm .dropdown-item:hover {
+  background: #000000!important;
+}
+#ext_menu-3r .navbar,
+#ext_menu-3r .nav-dropdown-sm,
+#ext_menu-3r .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-3r .nav-dropdown-sm .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-3r .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-3r .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-3r .bg-color.transparent.opened .link:hover,
+#ext_menu-3r .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-3r .link[aria-expanded="true"],
+#ext_menu-3r .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#ext_menu-3u .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-3u .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-3u .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-3u .close-icon::before,
+#ext_menu-3u .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-3u .link,
+#ext_menu-3u .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-3u .link {
+  font-size: 0.75rem;
+}
+#ext_menu-3u .dropdown-item,
+#ext_menu-3u .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#ext_menu-3u .link:hover,
+#ext_menu-3u .dropdown-item:hover,
+#ext_menu-3u .link:focus,
+#ext_menu-3u .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-3u .link[aria-expanded="true"],
+#ext_menu-3u .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-3u .nav-dropdown-sm .link:focus,
+#ext_menu-3u .nav-dropdown-sm .link:hover,
+#ext_menu-3u .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-3u .nav-dropdown-sm .dropdown-item:hover {
+  background: #000000!important;
+}
+#ext_menu-3u .navbar,
+#ext_menu-3u .nav-dropdown-sm,
+#ext_menu-3u .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-3u .nav-dropdown-sm .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-3u .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-3u .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-3u .bg-color.transparent.opened .link:hover,
+#ext_menu-3u .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-3u .link[aria-expanded="true"],
+#ext_menu-3u .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#ext_menu-3x .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-3x .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-3x .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-3x .close-icon::before,
+#ext_menu-3x .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-3x .link,
+#ext_menu-3x .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-3x .link {
+  font-size: 0.75rem;
+}
+#ext_menu-3x .dropdown-item,
+#ext_menu-3x .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#ext_menu-3x .link:hover,
+#ext_menu-3x .dropdown-item:hover,
+#ext_menu-3x .link:focus,
+#ext_menu-3x .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-3x .link[aria-expanded="true"],
+#ext_menu-3x .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-3x .nav-dropdown-sm .link:focus,
+#ext_menu-3x .nav-dropdown-sm .link:hover,
+#ext_menu-3x .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-3x .nav-dropdown-sm .dropdown-item:hover {
+  background: #000000!important;
+}
+#ext_menu-3x .navbar,
+#ext_menu-3x .nav-dropdown-sm,
+#ext_menu-3x .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-3x .nav-dropdown-sm .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-3x .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-3x .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-3x .bg-color.transparent.opened .link:hover,
+#ext_menu-3x .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-3x .link[aria-expanded="true"],
+#ext_menu-3x .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
 }
