--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1140,3 +1140,80 @@ h6,
 #ext_menu-3x .dropdown-item[aria-expanded="true"] {
   color: #c0a375!important;
 }
+#ext_menu-4c .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-4c .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-4c .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-4c .close-icon::before,
+#ext_menu-4c .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-4c .link,
+#ext_menu-4c .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-4c .link {
+  font-size: 0.75rem;
+}
+#ext_menu-4c .dropdown-item,
+#ext_menu-4c .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#ext_menu-4c .link:hover,
+#ext_menu-4c .dropdown-item:hover,
+#ext_menu-4c .link:focus,
+#ext_menu-4c .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-4c .link[aria-expanded="true"],
+#ext_menu-4c .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-4c .nav-dropdown-sm .link:focus,
+#ext_menu-4c .nav-dropdown-sm .link:hover,
+#ext_menu-4c .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-4c .nav-dropdown-sm .dropdown-item:hover {
+  background: #000000!important;
+}
+#ext_menu-4c .navbar,
+#ext_menu-4c .nav-dropdown-sm,
+#ext_menu-4c .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-4c .nav-dropdown-sm .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-4c .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-4c .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-4c .bg-color.transparent.opened .link:hover,
+#ext_menu-4c .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-4c .link[aria-expanded="true"],
+#ext_menu-4c .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#header1-4f .mbr-section-title {
+  font-size: 60px;
+}
+#header1-4f .mbr-section-lead {
+  font-size: 23px;
+  text-align: left;
+}
+#header3-4h .mbr-section-title,
+#header3-4h .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-4h H3 {
+  text-align: right;
+  font-size: 32px;
+  color: #ffffff;
+}
