--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,8 +1,12 @@
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
-@import url(https://fonts.googleapis.com/css?family=Lora:400,700);
-@import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Merriweather:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=PT+Serif:400,700);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
+
+
+
+
 
 
 
@@ -413,6 +417,322 @@ h6,
 .scrollToTop_wraper {
   opacity: 0 !important;
 }
+#ext_menu-2 .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-2 .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-2 .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-2 .close-icon::before,
+#ext_menu-2 .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-2 .link,
+#ext_menu-2 .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-2 .link {
+  font-size: 0.75rem;
+}
+#ext_menu-2 .dropdown-item,
+#ext_menu-2 .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#ext_menu-2 .link:hover,
+#ext_menu-2 .dropdown-item:hover,
+#ext_menu-2 .link:focus,
+#ext_menu-2 .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-2 .link[aria-expanded="true"],
+#ext_menu-2 .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-2 .nav-dropdown-sm .link:focus,
+#ext_menu-2 .nav-dropdown-sm .link:hover,
+#ext_menu-2 .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-2 .nav-dropdown-sm .dropdown-item:hover {
+  background: #000000!important;
+}
+#ext_menu-2 .navbar,
+#ext_menu-2 .nav-dropdown-sm,
+#ext_menu-2 .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-2 .nav-dropdown-sm .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-2 .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-2 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-2 .bg-color.transparent.opened .link:hover,
+#ext_menu-2 .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-2 .link[aria-expanded="true"],
+#ext_menu-2 .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#msg-box6-g .mbr-section-title,
+#msg-box6-g .lead p {
+  color: #fff;
+}
+#msg-box6-g SPAN {
+  font-family: 'Merriweather', serif;
+  font-size: 48px;
+}
+#msg-box6-g .btn {
+  font-size: 14px;
+}
+#msg-box6-g P {
+  font-family: 'Lora', serif;
+}
+#header3-31 .mbr-section-title,
+#header3-31 .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-31 H3 {
+  font-family: 'PT Serif', serif;
+  font-size: 46px;
+  color: #000000;
+}
+#features4-r .card-subtitle {
+  color: #bcbcbc;
+}
+#features4-r .iconbox {
+  background-color: #ffffff;
+  border-color: #ffffff;
+}
+#features4-r P {
+  text-align: left;
+}
+#features4-r H4 {
+  color: #232323;
+  font-family: 'PT Serif', serif;
+}
+#ext_menu-4l .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-4l .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-4l .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-4l .close-icon::before,
+#ext_menu-4l .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-4l .link,
+#ext_menu-4l .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-4l .link {
+  font-size: 0.75rem;
+}
+#ext_menu-4l .dropdown-item,
+#ext_menu-4l .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#ext_menu-4l .link:hover,
+#ext_menu-4l .dropdown-item:hover,
+#ext_menu-4l .link:focus,
+#ext_menu-4l .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-4l .link[aria-expanded="true"],
+#ext_menu-4l .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-4l .nav-dropdown-sm .link:focus,
+#ext_menu-4l .nav-dropdown-sm .link:hover,
+#ext_menu-4l .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-4l .nav-dropdown-sm .dropdown-item:hover {
+  background: #000000!important;
+}
+#ext_menu-4l .navbar,
+#ext_menu-4l .nav-dropdown-sm,
+#ext_menu-4l .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-4l .nav-dropdown-sm .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-4l .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-4l .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-4l .bg-color.transparent.opened .link:hover,
+#ext_menu-4l .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-4l .link[aria-expanded="true"],
+#ext_menu-4l .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#header1-4o .mbr-section-title {
+  font-size: 60px;
+}
+#header1-4o .mbr-section-lead {
+  font-size: 23px;
+  text-align: left;
+}
+#msg-box8-4r .mbr-section-title,
+#msg-box8-4r p {
+  color: #fff;
+}
+#header3-4p .mbr-section-title,
+#header3-4p .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-4p H3 {
+  text-align: right;
+  font-size: 32px;
+  color: #ffffff;
+}
+
+#ext_menu-2x .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-2x .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-2x .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-2x .close-icon::before,
+#ext_menu-2x .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-2x .link,
+#ext_menu-2x .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-2x .link {
+  font-size: 0.75rem;
+}
+#ext_menu-2x .dropdown-item,
+#ext_menu-2x .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#ext_menu-2x .link:hover,
+#ext_menu-2x .dropdown-item:hover,
+#ext_menu-2x .link:focus,
+#ext_menu-2x .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-2x .link[aria-expanded="true"],
+#ext_menu-2x .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-2x .nav-dropdown-sm .link:focus,
+#ext_menu-2x .nav-dropdown-sm .link:hover,
+#ext_menu-2x .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-2x .nav-dropdown-sm .dropdown-item:hover {
+  background: #000000!important;
+}
+#ext_menu-2x .navbar,
+#ext_menu-2x .nav-dropdown-sm,
+#ext_menu-2x .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-2x .nav-dropdown-sm .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-2x .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-2x .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-2x .bg-color.transparent.opened .link:hover,
+#ext_menu-2x .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-2x .link[aria-expanded="true"],
+#ext_menu-2x .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#form1-30 .form-control-label {
+  color: #232323;
+}
+#form1-30 .mbr-section-title {
+  font-family: 'Merriweather', serif;
+}
+
+#ext_menu-3e .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-3e .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-3e .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-3e .close-icon::before,
+#ext_menu-3e .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-3e .link,
+#ext_menu-3e .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-3e .link {
+  font-size: 0.75rem;
+}
+#ext_menu-3e .dropdown-item,
+#ext_menu-3e .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#ext_menu-3e .link:hover,
+#ext_menu-3e .dropdown-item:hover,
+#ext_menu-3e .link:focus,
+#ext_menu-3e .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-3e .link[aria-expanded="true"],
+#ext_menu-3e .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-3e .nav-dropdown-sm .link:focus,
+#ext_menu-3e .nav-dropdown-sm .link:hover,
+#ext_menu-3e .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-3e .nav-dropdown-sm .dropdown-item:hover {
+  background: #000000!important;
+}
+#ext_menu-3e .navbar,
+#ext_menu-3e .nav-dropdown-sm,
+#ext_menu-3e .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-3e .nav-dropdown-sm .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-3e .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-3e .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-3e .bg-color.transparent.opened .link:hover,
+#ext_menu-3e .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-3e .link[aria-expanded="true"],
+#ext_menu-3e .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#header4-3j .mbr-section-lead {
+  text-align: left;
+  font-family: 'Lora', serif;
+}
+#header4-3j .mbr-section-title {
+  text-align: center;
+}
 #ext_menu-18 .hide-buttons .nav-btn {
   display: none !important;
 }
@@ -596,74 +916,6 @@ h6,
 #ext_menu-2h .dropdown-item[aria-expanded="true"] {
   color: #c0a375!important;
 }
-
-#ext_menu-2x .hide-buttons .nav-btn {
-  display: none !important;
-}
-#ext_menu-2x .navbar-caption {
-  color: #ffffff;
-}
-#ext_menu-2x .navbar-toggler {
-  color: #ffffff;
-}
-#ext_menu-2x .close-icon::before,
-#ext_menu-2x .close-icon::after {
-  background-color: #ffffff;
-}
-#ext_menu-2x .link,
-#ext_menu-2x .dropdown-item {
-  color: #ffffff;
-}
-#ext_menu-2x .link {
-  font-size: 0.75rem;
-}
-#ext_menu-2x .dropdown-item,
-#ext_menu-2x .nav-dropdown-sm .link {
-  font-size: 0.812rem;
-}
-#ext_menu-2x .link:hover,
-#ext_menu-2x .dropdown-item:hover,
-#ext_menu-2x .link:focus,
-#ext_menu-2x .dropdown-item:focus {
-  color: #c0a375;
-}
-#ext_menu-2x .link[aria-expanded="true"],
-#ext_menu-2x .dropdown-menu {
-  background: #000000;
-}
-#ext_menu-2x .nav-dropdown-sm .link:focus,
-#ext_menu-2x .nav-dropdown-sm .link:hover,
-#ext_menu-2x .nav-dropdown-sm .dropdown-item:focus,
-#ext_menu-2x .nav-dropdown-sm .dropdown-item:hover {
-  background: #000000!important;
-}
-#ext_menu-2x .navbar,
-#ext_menu-2x .nav-dropdown-sm,
-#ext_menu-2x .nav-dropdown-sm .link[aria-expanded="true"],
-#ext_menu-2x .nav-dropdown-sm .dropdown-menu {
-  background: #000000;
-}
-#ext_menu-2x .bg-color.transparent .link {
-  color: #ffffff;
-  transition: none;
-}
-#ext_menu-2x .bg-color.transparent.opened .link {
-  transition: color 0.2s ease-in-out;
-}
-#ext_menu-2x .bg-color.transparent.opened .link:hover,
-#ext_menu-2x .bg-color.transparent.opened .link:focus {
-  color: #c0a375;
-}
-#ext_menu-2x .link[aria-expanded="true"],
-#ext_menu-2x .dropdown-item[aria-expanded="true"] {
-  color: #c0a375!important;
-}
-#form1-30 .form-control-label {
-  color: #232323;
-}
-#form1-30 .mbr-section-title {
-  font-family: 'Merriweather', serif;
-}
 #ext_menu-34 .hide-buttons .nav-btn {
   display: none !important;
 }
@@ -724,75 +976,6 @@ h6,
 #ext_menu-34 .link[aria-expanded="true"],
 #ext_menu-34 .dropdown-item[aria-expanded="true"] {
   color: #c0a375!important;
-}
-
-#ext_menu-3e .hide-buttons .nav-btn {
-  display: none !important;
-}
-#ext_menu-3e .navbar-caption {
-  color: #ffffff;
-}
-#ext_menu-3e .navbar-toggler {
-  color: #ffffff;
-}
-#ext_menu-3e .close-icon::before,
-#ext_menu-3e .close-icon::after {
-  background-color: #ffffff;
-}
-#ext_menu-3e .link,
-#ext_menu-3e .dropdown-item {
-  color: #ffffff;
-}
-#ext_menu-3e .link {
-  font-size: 0.75rem;
-}
-#ext_menu-3e .dropdown-item,
-#ext_menu-3e .nav-dropdown-sm .link {
-  font-size: 0.812rem;
-}
-#ext_menu-3e .link:hover,
-#ext_menu-3e .dropdown-item:hover,
-#ext_menu-3e .link:focus,
-#ext_menu-3e .dropdown-item:focus {
-  color: #c0a375;
-}
-#ext_menu-3e .link[aria-expanded="true"],
-#ext_menu-3e .dropdown-menu {
-  background: #000000;
-}
-#ext_menu-3e .nav-dropdown-sm .link:focus,
-#ext_menu-3e .nav-dropdown-sm .link:hover,
-#ext_menu-3e .nav-dropdown-sm .dropdown-item:focus,
-#ext_menu-3e .nav-dropdown-sm .dropdown-item:hover {
-  background: #000000!important;
-}
-#ext_menu-3e .navbar,
-#ext_menu-3e .nav-dropdown-sm,
-#ext_menu-3e .nav-dropdown-sm .link[aria-expanded="true"],
-#ext_menu-3e .nav-dropdown-sm .dropdown-menu {
-  background: #000000;
-}
-#ext_menu-3e .bg-color.transparent .link {
-  color: #ffffff;
-  transition: none;
-}
-#ext_menu-3e .bg-color.transparent.opened .link {
-  transition: color 0.2s ease-in-out;
-}
-#ext_menu-3e .bg-color.transparent.opened .link:hover,
-#ext_menu-3e .bg-color.transparent.opened .link:focus {
-  color: #c0a375;
-}
-#ext_menu-3e .link[aria-expanded="true"],
-#ext_menu-3e .dropdown-item[aria-expanded="true"] {
-  color: #c0a375!important;
-}
-#header4-3j .mbr-section-lead {
-  text-align: left;
-  font-family: 'Lora', serif;
-}
-#header4-3j .mbr-section-title {
-  text-align: center;
 }
 #ext_menu-3o .hide-buttons .nav-btn {
   display: none !important;
@@ -1037,183 +1220,4 @@ h6,
 #ext_menu-3x .link[aria-expanded="true"],
 #ext_menu-3x .dropdown-item[aria-expanded="true"] {
   color: #c0a375!important;
-}
-
-
-
-
-#ext_menu-2 .hide-buttons .nav-btn {
-  display: none !important;
-}
-#ext_menu-2 .navbar-caption {
-  color: #ffffff;
-}
-#ext_menu-2 .navbar-toggler {
-  color: #ffffff;
-}
-#ext_menu-2 .close-icon::before,
-#ext_menu-2 .close-icon::after {
-  background-color: #ffffff;
-}
-#ext_menu-2 .link,
-#ext_menu-2 .dropdown-item {
-  color: #ffffff;
-}
-#ext_menu-2 .link {
-  font-size: 0.75rem;
-}
-#ext_menu-2 .dropdown-item,
-#ext_menu-2 .nav-dropdown-sm .link {
-  font-size: 0.812rem;
-}
-#ext_menu-2 .link:hover,
-#ext_menu-2 .dropdown-item:hover,
-#ext_menu-2 .link:focus,
-#ext_menu-2 .dropdown-item:focus {
-  color: #c0a375;
-}
-#ext_menu-2 .link[aria-expanded="true"],
-#ext_menu-2 .dropdown-menu {
-  background: #000000;
-}
-#ext_menu-2 .nav-dropdown-sm .link:focus,
-#ext_menu-2 .nav-dropdown-sm .link:hover,
-#ext_menu-2 .nav-dropdown-sm .dropdown-item:focus,
-#ext_menu-2 .nav-dropdown-sm .dropdown-item:hover {
-  background: #000000!important;
-}
-#ext_menu-2 .navbar,
-#ext_menu-2 .nav-dropdown-sm,
-#ext_menu-2 .nav-dropdown-sm .link[aria-expanded="true"],
-#ext_menu-2 .nav-dropdown-sm .dropdown-menu {
-  background: #000000;
-}
-#ext_menu-2 .bg-color.transparent .link {
-  color: #ffffff;
-  transition: none;
-}
-#ext_menu-2 .bg-color.transparent.opened .link {
-  transition: color 0.2s ease-in-out;
-}
-#ext_menu-2 .bg-color.transparent.opened .link:hover,
-#ext_menu-2 .bg-color.transparent.opened .link:focus {
-  color: #c0a375;
-}
-#ext_menu-2 .link[aria-expanded="true"],
-#ext_menu-2 .dropdown-item[aria-expanded="true"] {
-  color: #c0a375!important;
-}
-#msg-box6-g .mbr-section-title,
-#msg-box6-g .lead p {
-  color: #fff;
-}
-#msg-box6-g SPAN {
-  font-family: 'Merriweather', serif;
-  font-size: 48px;
-}
-#msg-box6-g .btn {
-  font-size: 14px;
-}
-#msg-box6-g P {
-  font-family: 'Lora', serif;
-}
-#header3-31 .mbr-section-title,
-#header3-31 .mbr-section-subtitle {
-  text-align: center;
-}
-#header3-31 H3 {
-  font-family: 'PT Serif', serif;
-  font-size: 46px;
-  color: #000000;
-}
-#features4-r .card-subtitle {
-  color: #bcbcbc;
-}
-#features4-r .iconbox {
-  background-color: #ffffff;
-  border-color: #ffffff;
-}
-#features4-r P {
-  text-align: left;
-}
-#features4-r H4 {
-  color: #232323;
-  font-family: 'PT Serif', serif;
-}
-#ext_menu-4l .hide-buttons .nav-btn {
-  display: none !important;
-}
-#ext_menu-4l .navbar-caption {
-  color: #ffffff;
-}
-#ext_menu-4l .navbar-toggler {
-  color: #ffffff;
-}
-#ext_menu-4l .close-icon::before,
-#ext_menu-4l .close-icon::after {
-  background-color: #ffffff;
-}
-#ext_menu-4l .link,
-#ext_menu-4l .dropdown-item {
-  color: #ffffff;
-}
-#ext_menu-4l .link {
-  font-size: 0.75rem;
-}
-#ext_menu-4l .dropdown-item,
-#ext_menu-4l .nav-dropdown-sm .link {
-  font-size: 0.812rem;
-}
-#ext_menu-4l .link:hover,
-#ext_menu-4l .dropdown-item:hover,
-#ext_menu-4l .link:focus,
-#ext_menu-4l .dropdown-item:focus {
-  color: #c0a375;
-}
-#ext_menu-4l .link[aria-expanded="true"],
-#ext_menu-4l .dropdown-menu {
-  background: #000000;
-}
-#ext_menu-4l .nav-dropdown-sm .link:focus,
-#ext_menu-4l .nav-dropdown-sm .link:hover,
-#ext_menu-4l .nav-dropdown-sm .dropdown-item:focus,
-#ext_menu-4l .nav-dropdown-sm .dropdown-item:hover {
-  background: #000000!important;
-}
-#ext_menu-4l .navbar,
-#ext_menu-4l .nav-dropdown-sm,
-#ext_menu-4l .nav-dropdown-sm .link[aria-expanded="true"],
-#ext_menu-4l .nav-dropdown-sm .dropdown-menu {
-  background: #000000;
-}
-#ext_menu-4l .bg-color.transparent .link {
-  color: #ffffff;
-  transition: none;
-}
-#ext_menu-4l .bg-color.transparent.opened .link {
-  transition: color 0.2s ease-in-out;
-}
-#ext_menu-4l .bg-color.transparent.opened .link:hover,
-#ext_menu-4l .bg-color.transparent.opened .link:focus {
-  color: #c0a375;
-}
-#ext_menu-4l .link[aria-expanded="true"],
-#ext_menu-4l .dropdown-item[aria-expanded="true"] {
-  color: #c0a375!important;
-}
-#header1-4o .mbr-section-title {
-  font-size: 60px;
-}
-#header1-4o .mbr-section-lead {
-  font-size: 23px;
-  text-align: left;
-}
-#header3-4p .mbr-section-title,
-#header3-4p .mbr-section-subtitle {
-  text-align: center;
-}
-#header3-4p H3 {
-  text-align: right;
-  font-size: 32px;
-  color: #ffffff;
 }
