create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -491,6 +491,7 @@ h6,
 }
 #msg-box6-g P {
   font-family: 'Lora', serif;
+  text-align: left;
 }
 #header3-31 .mbr-section-title,
 #header3-31 .mbr-section-subtitle {
