--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -958,12 +958,11 @@ h6,
 #ext_menu-34 .dropdown-item[aria-expanded="true"] {
   color: #c0a375!important;
 }
-#header3-58 .mbr-section-title,
-#header3-58 .mbr-section-subtitle {
-  text-align: center;
+#msg-box2-5i .mbr-section-title {
+  color: #fff;
 }
-#header3-58 H3 {
-  color: #313030;
+#msg-box2-5i .mbr-section-subtitle {
+  color: #a0a0a0;
 }
 #contacts4-4m UL {
   text-align: left;
@@ -1299,4 +1298,71 @@ h6,
 #ext_menu-5a .link[aria-expanded="true"],
 #ext_menu-5a .dropdown-item[aria-expanded="true"] {
   color: #c0a375!important;
+}
+#ext_menu-60 .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-60 .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-60 .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-60 .close-icon::before,
+#ext_menu-60 .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-60 .link,
+#ext_menu-60 .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-60 .link {
+  font-size: 0.75rem;
+}
+#ext_menu-60 .dropdown-item,
+#ext_menu-60 .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#ext_menu-60 .link:hover,
+#ext_menu-60 .dropdown-item:hover,
+#ext_menu-60 .link:focus,
+#ext_menu-60 .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-60 .link[aria-expanded="true"],
+#ext_menu-60 .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-60 .nav-dropdown-sm .link:focus,
+#ext_menu-60 .nav-dropdown-sm .link:hover,
+#ext_menu-60 .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-60 .nav-dropdown-sm .dropdown-item:hover {
+  background: #000000!important;
+}
+#ext_menu-60 .navbar,
+#ext_menu-60 .nav-dropdown-sm,
+#ext_menu-60 .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-60 .nav-dropdown-sm .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-60 .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-60 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-60 .bg-color.transparent.opened .link:hover,
+#ext_menu-60 .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-60 .link[aria-expanded="true"],
+#ext_menu-60 .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#contacts4-61 UL {
+  text-align: left;
+}
+#contacts4-61 P {
+  color: #ffffff;
 }
